fixes alignment issues in instance boxes, maps.html

--- a/apps/spineReplacement/static/spineReplacement/maps.css
+++ b/apps/spineReplacement/static/spineReplacement/maps.css
@@ -62,6 +62,7 @@ body,html {
   top: 10px;
   right: 40px;
   z-index: 5000;
+  font-weight: bold;
 }
 .top_pad {
   padding-bottom: 150px;
